Mejora estetica, correccion responsive y codigo más limpio

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <!-- Hojas de estilo -->
     <link rel="stylesheet" href="./stylesheet/style.css">
-    <link rel="stylesheet" href="./stylesheet/tablet.css" media="screen and (min-width: 760px)">
-    <link rel="stylesheet" href="./stylesheet/desktop.css" media="screen and (min-width: 1024px)">
+    <link rel="stylesheet" href="./stylesheet/media.css">
 
     <!-- Librería de alerta, Sweet Alert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -36,6 +35,7 @@
                 <textarea name="" id="output-texto" class="output-texto" cols="30" rows="10"></textarea>
                 <P id="texto1-contder" class="texto1-contder">Ningún mensaje fue encontrado</P>
                 <p id="texto2-contder" class="texto2-contder">Ingresa el texto que desees encriptar o desencriptar.</p>               
+                <img src="./img/logo.png" alt="Logo" class="img-logo" id="img-logo">
             </div>              
         </div>
     </main>
